<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConnectMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_first_screen">ConnectMe</string>
    <string name="login_name_text">Enter User Name</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="submit_button">Submit</string>
    <string name="signUp_button">Sign Up</string>
    <string name="title_activity_third_screen">ConnectMe</string>
    <string name="login_button">login_button</string>
    <string name="title_activity_self_profile">ConnectMe</string>
    <string name="title_activity_roledivider">ConnectMe</string>
    <string name="title_activity_recruiter_first_screen">ConnectMe</string>
    <string name="title_activity_recruiter_resume_screen">ConnectMe</string>
    <string name="title_activity_tag_creation_screen">ConnectMe</string>
    <string name="title_search_companies_screen">ConnectMe</string>
    <string name="title_upload_new_resume_screen">ConnectMe</string>
</resources>